# monorepo

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9e8dd7ceb10e_table_user.py
backend/db/: __init__.py  controller.py  models.py
frontend/: Dockerfile
scripts/: build.sh  server-shell.sh
