[tool.poetry]
name = "desk"
version = "0.1.0"
description = ""
authors = ["Jacob Willemsma <jacob.willemsma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
